<resources>
    <string name="app_name">EPF Calculator</string>
    <string name="date">DD/MM/YYYY </string>
    <string name="btnDate">Pick Birth Date</string>
    <string name="basic">Required Basic Saving in Account 1:</string>
    <string name="Age">Your Age: </string>
    <string name="Saving">Minimum Saving: </string>
    <string name="btnCheck">Check</string>
    <string name="transfer">Maximum Transfer: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
